# AIAgents

./: ._.gitignore  ._=0.0.5  ._=0.0.5,  ._=0.1.5  ._=0.1.52  ._=0.1.52,  ._=0.5.2  ._config.py  ._db  ._experimentation.py  ._get-pip.py  ._googleCustomSearch.py  ._podcastHelperAgents  ._potential_guests_challenge_the_often-negative_perceptions_of_Western_culture_prevalent_in_Eastern_countries,_particularly_India.txt  ._potential_guests_challenge_the_often-negative_perceptions_of_Western_culture_prevalent_in_Eastern_countries.txt  ._potential_guests_mistrust_of_the_west_and_western_ideas_in_india.txt  ._requirements.txt  ._transcription.txt  .gitignore  .python-version  =0.0.5  =0.1.5  =0.5.2  AInewsletteremail.py  Gauri Maulekhi_twitter_analysis.txt  Kiran_extracted_audio_transcription_test.txt  README.md  anthropicCrafter.py  anthropicExperiment.py  baseAgentCode.py  enhancedGoogleCustomSearch.py  experimentation.py  full_transcript.txt  googleCustomSearch.py  guest_processing.py  perplexitySearch.py  podcastPoolerWithEmail.py  podcastShortlisterAgent.py  potential_guests_challenge_the_often-negative_perceptions_of_Western_culture_prevalent_in_Eastern_countries,_particularly_India.txt  potential_guests_challenge_the_often-negative_perceptions_of_Western_culture_prevalent_in_Eastern_countries.txt  (+12 more)
BrosRiffn/: anthropicScriptCreator.py  brosRiffnScriptCreator.py  brosRiffnScriptCreatorV2.py  godmanQuoteGenerator.py
LLMs/: customChatBot.py  diffusionImageUpscaler.py  llama3dot1.py
agents/: business_analyst.json  project_manager.json  software_developer.json  user_experience_designer.json
ai-research-frontend/: package-lock.json  package.json
ai_research_assistant/: Mike_Tyson's_life_research_crew.json  agent_generator.py  pyproject.toml  server.py  south_asian_history_research_crew.json  test_full_research_process.py  test_research_crew_generator.py
crewAIwithJson/: Dr._Simon_Colton_email.txt
customAgents/: costOfCityNameChangeAgents.py  govtTransparencyAgents.py  lokSabhaBillTransparencyAgents.py  podcastEnhancerAgents.py
db/: ._chroma.sqlite3  chroma.sqlite3
experimentalCode/: Llama3_CrewAI_Groq.py  anthropicConnectionTest.py  main.py  playGround.py  podcastGuestEmailer.py  podcastGuestPooler.py  podcastGuestPoolerAnthropicCrewAI.py  podcastPoolerWithEmailGDrive.py
experimentalJamie/: base_jamie.py  experimental_jamie.py
flaskAgentsManager/: flaskAgentLogic.py
guiBlogRefinementAgents/: blogRefinementAgentSpawner.py  blogRefinementAgents.py  blogRefinementAgentsNoGUI.py
guiFirstProto/: ._autoPopulatedAgents.py  ._tTkinterTestFile.py  agentAggregator.py  agent_manager.py  autoPopulatedAgents.py  autoPopulatedGoalsTasks.py  autoPopulatedGoalsTasks2.py  generate_agent_details.py  guiFirstProtoAgent.py  gui_app.py  tTkinterTestFile.py  test.py
guiIdeaRefinementAgents/: ideaRefinementAgents.py  ideaRefinementAgentsSpawner.py
guiWithSearchCapability/: custom_dialogs.py  guiWithSearchCapability.py  searchPromptCrafter.py  tavilySearchEngine.py
new_env/: pyvenv.cfg
newpaper_generator/: article_writer.py  email_sender.py  layout_designer.py  main_newspaper_generator.py  news_fetcher.py  newspaper_formatter.py  topic_selector.py
personalAssistantAgent/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  airtable_integration.py  assistant_config.py  backend_api.py  conversational_assistant.py  personal_assistant_system.py  streaming_assistant.py  task_management_agent.py  test_assistant.py  test_integration.py  whisper_integration.py
podcastHelperAgents/: ._Whatsapp_University_blog_post.txt  .___init__.py  .___pycache__  ._audioExtractionDebug.py  ._audioTranscriptionWithSpeakerID.py  ._ideaIncubatorAgents.py  ._outOfTheBoxQuestionsCreator.py  ._pdfChatbot.py  ._pdfOCR.py  ._pdfReaderQuestionFormulator.py  ._pngToPDFConverter.py  ._podcastGuestContactFinder.py  ._podcastGuestDeepResearch.py  ._podcastHelperAgents.py  ._podcastHelperAgentsSpawner.py  ._podcastHelperNoGui.py  ._podcastPersonalityAnalyzer.py  ._podcastPreparationSystem.py  ._podcastScriptLastMinutePolisher.py  ._podcastToBlogCreatorAgents.py  ._researchSalientPointsGatherer.py  ._videoToTextCreator.py  ._voiceRecognitionTest.py  ._voice_recognition.py  ._youtubePodcastMaterialGenerator.py  AIAgents.code-workspace  AIJamie.py  Whatsapp_University_blog_post.txt  audioExtraction.py  audioExtractionDebug.py  audioExtractionLocalized.py  audioTranscriptionGoogleColab.py  audioTranscriptionWithDiarization.py  audioTranscriptionWithSpeakerID.py  audioTranscriptionWithSpeakerIDHuggingFace.py  bropinionAgentSystem.py  ideaIncubatorAgents.py  idea_expounder_agents.py  outOfTheBoxQuestionsCreator.py  pdfChatbot.py  (+36 more)
podcastPersonalityFinder/: ._indianBureucracyFinder.py  ._podcastEmailCrafter.py  ._podcastGuestFinderAgents.py  ._podcastGuestFinderWithNicheProvided.py  ._podcastPersonalities.txt  businessIntelligenceAgents.py  cannabis_ice_cream_demo.py  demo_searches.py  emailExperimentation.py  facebookGroupFinder.py  imageAI.code-workspace  indianBureucracyFinder.py  intelligentEmailerClass.py  podcastAgentsIndiaRelated.py  podcastEmailCrafter.py  podcastGuestFinderAgents.py  podcastGuestFinderWithNicheProvided.py  podcastHostDiscoveryAgent.py  podcastHostParser.py  podcastOutreachEmailCrew.py  podcastOutreachEmailGenerator.py  podcastPersonalities.txt  quick_demo.py  run_single_demo.py  sample_report.md  socialMediaEmailCreator.py  tavilySocialMediaPersonalitySearcher.py  test_facebook_finder.py  versatileBusinessSearch.py
podcast_simulations/: podcast_simulation_Dulki Seethawaka_Animal Rights in South Asia_20241016_105554.json  podcast_simulation_Dulki Seethawaka_Animal Rights_20241016_140403.json  podcast_simulation_Dulki Seethawaka_Animal Rights_20241016_143412.json
pythonAudioTranscription/: transcriptsWithSpeakerNames.py
socialMediaPersonalityFinder/: socialMediaFinderAgents.py
src/: App.js  PodcastGuestFinder.js
usefulTools/: godman_quote_scraper.py  googleSearcherAgents.py  live_transcriber.py  llm_repository.py  mermaidArchitectureFile.md  search_tools.py  search_tools_prototyping.py  (+7 more)
(+39 files in other folders)
